# Buildify-API

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  example.env  pyproject.toml  task.md
alembic/: env.py
alembic/versions/: 4314f5401cea_initial_tables.py  708a8364f19f_initial_tables.py
app/: main.py
app/api/: organization.py
app/config/: __init__.py  consts.py
app/config/db/: __init__.py
app/db/models/: __init__.py  activity.py  assoc_table.py  building.py  organization.py  phone.py
app/db/models/base/: declarative.py
app/db/models/organizations/: __init__.py  organizations.py
app/schemes/: geo.py
app/secure/: __init__.py
app/setup/: db.py  test_data.py
app/utils/: __init__.py  converters.py
